--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,3 +5,5 @@ Title: MyEpisodes RSS/API functions
 Author: Matt Malin <R@mattmalin.co.uk>
 Description: MyEpisodes stats and useful functions
 License: GPL (>= 2)
+Collate:
+    'myepisodes.R'
