--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,6 +5,8 @@ Title: MyEpisodes RSS/API functions
 Author: Matt Malin <R@mattmalin.co.uk>
 Maintainer: Matt Malin <R@mattmalin.co.uk>
 Description: MyEpisodes stats and useful functions
+Imports:
+    XML
 License: GPL (>= 2)
 Collate:
     'myepisodes.R'
