--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: myepisodes
 Version: 0.0.3
 Date: 2012-02-17
 Title: MyEpisodes RSS/API functions
-Author: Matt Malin <R@mattmalin.co.uk>
-Maintainer: Matt Malin <R@mattmalin.co.uk>
+Author: Matt Malin <email@mattmalin.co.uk>
+Maintainer: Matt Malin <email@mattmalin.co.uk>
 Description: MyEpisodes stats and useful functions
 Imports:
     XML
