--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: myepisodes
-Version: 0.1.0
+Version: 0.1.2
 Date: 2012-02-17
 Title: MyEpisodes RSS/API functions
 Author: Matt Malin <email@mattmalin.co.uk>
 Maintainer: Matt Malin <email@mattmalin.co.uk>
 Description: MyEpisodes stats and useful functions
+    Currently just for show info from a list, see \link{shows_from_myepisodes}
 Imports:
     XML
 License: GPL (>= 2)
