--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,8 +4,9 @@ Date: 2012-02-17
 Title: MyEpisodes RSS/API functions
 Author: Matt Malin <email@mattmalin.co.uk>
 Maintainer: Matt Malin <email@mattmalin.co.uk>
-Description: MyEpisodes stats and useful functions. Currently just for show 
-  info from a feed, see shows_from_myepisodes.
+Description: Useful functions for accessing MyEpisodes feeds and
+    episode information as well as other tv episode related actions through
+    www.myepisodes.com
 Imports:
     XML
 License: GPL (>= 2)
